--- a/package.json
+++ b/package.json
@@ -1,13 +1,37 @@
 {
-  "name": "docker_web_app",
-  "version": "1.0.0",
-  "description": "Node.js on Docker",
-  "author": "First Last <first.last@example.com>",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+   "steps": [
+      {
+         "name": "gcr.io/cloud-builders/docker",
+         "args": [
+            "build",
+            "-t",
+            "asia-south1-docker.pkg.dev/prj-common-srv-single-01/my-docker-repo/myimage",
+            "."
+         ]
+      },
+      {
+         "name": "gcr.io/cloud-builders/docker",
+         "args": [
+            "push",
+            "asia-south1-docker.pkg.dev/prj-common-srv-single-01/my-docker-repo/myimage"
+         ]
+      },
+      {
+         "name": "gcr.io/google.com/cloudsdktool/cloud-sdk",
+         "entrypoint": "gcloud",
+         "timeout": "240s",
+         "args": [
+            "compute",
+            "instances",
+            "create-with-container",
+            "my-vm-name",
+            "--container-image",
+            "asia-south1-docker.pkg.dev/prj-common-srv-single-01/my-docker-repo/myimage"
+         ],
+         "env": [
+            "CLOUDSDK_COMPUTE_REGION=asia-south1",
+            "CLOUDSDK_COMPUTE_ZONE=asia-south1-a"
+         ]
+      }
+   ]
 }
